Remove unused option hardwareDivergence